Fix GShapefile, add building loader, etc.
- Fix GShapefile
update Variant class.
- add building loader
implement a simple box-shape building for now.
- update building shapefile.

--- a/SimpleCities/SimpleCities.vcxproj.filters
+++ b/SimpleCities/SimpleCities.vcxproj.filters
@@ -208,6 +208,9 @@
     <ClCompile Include="GraphUtil.cpp">
       <Filter>Main Files</Filter>
     </ClCompile>
+    <ClCompile Include="geomutils.cpp">
+      <Filter>Main Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="MainWindow.ui">
@@ -387,6 +390,9 @@
       <Filter>Main Files</Filter>
     </ClInclude>
     <ClInclude Include="GraphUtil.h">
+      <Filter>Main Files</Filter>
+    </ClInclude>
+    <ClInclude Include="geomutils.h">
       <Filter>Main Files</Filter>
     </ClInclude>
   </ItemGroup>
