remove unused variables in RoadGraph class, etc,
- remove unused variables in RoadGraph class
- rename VBOBlock, VBOParcel, VBOBuilding

--- a/SimpleCities/SimpleCities.vcxproj
+++ b/SimpleCities/SimpleCities.vcxproj
@@ -204,11 +204,11 @@
     <ClCompile Include="TerrainSizeInputDialog.cpp" />
     <ClCompile Include="UrbanGeometry.cpp" />
     <ClCompile Include="Util.cpp" />
-    <ClCompile Include="VBOBlock.cpp" />
+    <ClCompile Include="Block.cpp" />
     <ClCompile Include="VBOGeoBuilding.cpp" />
     <ClCompile Include="VBOModel.cpp" />
     <ClCompile Include="VBOModel_StreetElements.cpp" />
-    <ClCompile Include="VBOParcel.cpp" />
+    <ClCompile Include="Parcel.cpp" />
     <ClCompile Include="VBOPm.cpp" />
     <ClCompile Include="VBOPmBlocks.cpp" />
     <ClCompile Include="VBOPmBuildings.cpp" />
@@ -309,12 +309,12 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe" -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED  -DBOOST_NO_TEMPLATE_PARTIAL_SPECIALIZATION "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DQT_DLL -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_OPENGL_LIB  "-I$(BOOST_ROOT)\." "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\QtOpenGL" "-I$(QTDIR)\include\QtTest" "-I.\..\opencv\include" "-I.\..\glew\include\GL" "-IC:\cgal4.5\include" "-IC:\cgal4.5\auxiliary\gmp\include"</Command>
     </CustomBuild>
     <ClInclude Include="UrbanGeometry.h" />
-    <ClInclude Include="VBOBlock.h" />
-    <ClInclude Include="VBOBuilding.h" />
+    <ClInclude Include="Block.h" />
+    <ClInclude Include="Building.h" />
     <ClInclude Include="VBOGeoBuilding.h" />
     <ClInclude Include="VBOModel.h" />
     <ClInclude Include="VBOModel_StreetElements.h" />
-    <ClInclude Include="VBOParcel.h" />
+    <ClInclude Include="Parcel.h" />
     <ClInclude Include="VBOPm.h" />
     <ClInclude Include="VBOPmBlocks.h" />
     <ClInclude Include="VBOPmBuildings.h" />
